[package]
name = "no_std_path"
version = "0.1.0"
edition = "2024"
description = "A no_std fork of the path module from https://github.com/rust-lang/rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/atom-planet-embrace/no_std_path"
readme = "README.md"
keywords = ["path", "no-std", "no_std"]
categories = ["no-std", "filesystem"]
documentation = "https://docs.rs/no_std_path"
authors = ["Michael Spiegel <michael.m.spiegel@gmail.com>"]
publish = false

[features]
default = ["std"]
std = []
